RESOLVED FIXED271652
AX: Assert crash in [WebAccessibilityObjectWrapper accessibilityPresenterProcessIdentifier].
https://bugs.webkit.org/show_bug.cgi?id=271652
Summary AX: Assert crash in [WebAccessibilityObjectWrapper accessibilityPresenterProc...
Andres Gonzalez
Reported 2024-03-25 09:11:31 PDT
* frame #0: 0x0000000329cd12c4 WebCore`WTFCrashWithInfo(line=51, file="/Users/ag/s/web/OpenSource/Source/WebCore/platform/RuntimeApplicationChecks.cpp", function="int WebCore::presentingApplicationPID()", counter=1609) at Assertions.h:837:5 frame #1: 0x000000032baa679c WebCore`WebCore::presentingApplicationPID() at RuntimeApplicationChecks.cpp:51:5 frame #2: 0x000000032d09f094 WebCore`-[WebAccessibilityObjectWrapper accessibilityPresenterProcessIdentifier](self=0x000000014b91a460, _cmd="accessibilityPresenterProcessIdentifier") at WebAccessibilityObjectWrapperMac.mm:3907:12 ...
Attachments
Patch (6.03 KB, patch)
2024-03-25 09:59 PDT, Andres Gonzalez
andresg_22: commit-queue+
Patch (6.03 KB, patch)
2024-03-25 11:59 PDT, Andres Gonzalez
no flags
Patch (6.03 KB, patch)
2024-03-25 18:02 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2024-03-25 09:11:41 PDT
Andres Gonzalez
Comment 2 2024-03-25 09:59:12 PDT
Andres Gonzalez
Comment 3 2024-03-25 11:59:32 PDT
Andres Gonzalez
Comment 4 2024-03-25 18:02:50 PDT
EWS
Comment 5 2024-03-25 19:48:35 PDT
Committed 276668@main (c5249991fba8): <https://commits.webkit.org/276668@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470598 [details].
Note You need to log in before you can comment on or make changes to this bug.