AX: Assert crash in [WebAccessibilityObjectWrapper accessibilityPresenterProcessIdentifier]. https://bugs.webkit.org/show_bug.cgi?id=271652 <rdar://problem/125357232>

Reviewed by Chris Fleizach.

Partial revert of https://bugs.webkit.org/show_bug.cgi?id=270866 (276073@main).
We are hitting the following assert on launch if VoiceOver is running:

int presentingApplicationPID()
{
    const auto& pid = presentingApplicationPIDOverride();
    ASSERT(!pid || RunLoop::isMain());
...

This patch reverts getting the process ID in the wrapper from the cached value in the AXIsolatedTree as it was before the above change.

* Source/WebCore/accessibility/AXCoreObject.h:
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:
(WebCore::AXIsolatedTree::treeID const):
(WebCore::AXIsolatedTree::processID const):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityPresenterProcessIdentifier]):

Canonical link: https://commits.webkit.org/276668@main